<resources>

    <string name="app_name">AnimatedWallpaper</string>
    <string name="viewer_name">Animated Images Viewer</string>
    <string name="settings">Animated Wallpaper Settings</string>
    <string name="title_activity_settings_wallpaper">Settings Wallpaper</string>
    <string name="title_service_wallpaper">Animated Live Wallpaper</string>
    <string name="title_view_picture">Image</string>
    <string name="description">Animated Wallpaper</string>
    <string name="settings_file_name">File Name</string>
    <string name="settings_file_name_summary">Choose file with extensions gif, png, svg, wrl, x3d, jpg or folder for animating.</string>
    <string name="settings_delay">Delay Animation</string>
    <string name="settings_delay_summary">if 0 then standart delay</string>
	<string name="title_style">Style</string>
	<string name="summary_style">Style of animation</string>
	<string name="button_save">Save</string>
	<string name="button_test">Test X3D viever</string>
	<string name="back_folder">..</string>
	<string name="hello_world">.</string>
	<string name="title_file_view_activity">Select file or folder</string>
	<string name="title_file_view_section">Select file or folder</string>
		

</resources>
