<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:title="@string/settings"
                  android:key="settings">
    <Preference android:title="@string/title_file_view_section" >
        <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.android.mm3.wallpaper.animated"
                android:targetClass="com.android.mm3.wallpaper.animated.FileViewActivity" />
    </Preference>
    
    <ListPreference
		android:key="style_anim" 
		android:title="@string/title_style" 
		android:summary="@string/summary_style" 
		android:entries="@array/entries_style" 
		android:entryValues="@array/entryvalues_style" 
		android:dialogTitle="@string/title_style"/>
		
	<EditTextPreference	android:key="delay_anim"
		android:title="@string/settings_delay"
		android:summary="@string/settings_delay_summary" />
		
</PreferenceScreen>
